# agentflow

./: .gitignore  LICENSE  README.md  pyproject.toml
agentflow/: __init__.py  cli.py
agentflow/analytics/: tracker.py
agentflow/api/: server.py
agentflow/benchmark/: suite.py
agentflow/gateway/: gateway.py
agentflow/pipeline/: chain.py
agentflow/providers/: anthropic.py  base.py  deepseek.py  openai.py  xiaomi.py
agentflow/router/: model_router.py  task_classifier.py
agentflow/utils/: logger.py
config/: default.yaml
tests/: test_analytics.py  test_model_router.py  test_pipeline.py  test_task_classifier.py
